make PhyloProfile fast again #105

--- a/vignettes/PhyloProfile-vignette.Rmd
+++ b/vignettes/PhyloProfile-vignette.Rmd
@@ -168,7 +168,7 @@ distanceMatrix <- getDistanceMatrix(profiles, method)
 
 #' Create clustered profile tree
 clusterMethod <- "complete"
-dd <- clusterDataDend(distanceMatrix, clusterMethod)
+dd <- clusterDataDend(as.dist(distanceMatrix), clusterMethod)
 getDendrogram(dd)
 ```
 
